add github oauth authentication
